rm new indicators from current RL.

--- a/templates/Default/faq.en.html.twig
+++ b/templates/Default/faq.en.html.twig
@@ -566,14 +566,14 @@
         <a href="{{ path('cards_zoom', { card_code: "12045" }) }}" target="_blank">Sea of Blood</a> <em>(Kings of the Isles, 45)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "06038" }) }}" target="_blank">Great Hall</a> <em>(Guarding the Realm, 38)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "10048" }) }}" target="_blank">Forced March</a> <em>(Sands of Dorne, 48)</em><br>
-        <a class="new" href="{{ path('cards_zoom', { card_code: "08080" }) }}" target="_blank">The King in the North</a> <em>(Favor of the Old Gods, 80)</em><br>
-        <a class="new" href="{{ path('cards_zoom', { card_code: "12047" }) }}" target="_blank"> Return to the Fields</a> <em>(Kings of the Isles, 47)</em><br>
-        <a class="new" href="{{ path('cards_zoom', { card_code: "13079" }) }}" target="_blank">Kingdom of Shadows</a> <em>(Beneath the Red Keep, 79)</em><br>
-        <a class="new" href="{{ path('cards_zoom', { card_code: "15045" }) }}" target="_blank">Bribery</a> <em>(Dragons of the East, 45)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "08080" }) }}" target="_blank">The King in the North</a> <em>(Favor of the Old Gods, 80)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "12047" }) }}" target="_blank"> Return to the Fields</a> <em>(Kings of the Isles, 47)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "13079" }) }}" target="_blank">Kingdom of Shadows</a> <em>(Beneath the Red Keep, 79)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "15045" }) }}" target="_blank">Bribery</a> <em>(Dragons of the East, 45)</em><br>
     </p>
-    <p class="new">
+    <p>
         <b><u>Baratheon</u>:</b><br>
-        <a class="new" href="{{ path('cards_zoom', { card_code: "14008" }) }}" target="_blank">Selyse Baratheon</a> <em>(Fury of the Storm, 8)</em>
+        <a href="{{ path('cards_zoom', { card_code: "14008" }) }}" target="_blank">Selyse Baratheon</a> <em>(Fury of the Storm, 8)</em>
     </p>
     <p>
         <b><u>Greyjoy</u>:</b><br>
@@ -583,13 +583,13 @@
         <a href="{{ path('cards_zoom', { card_code: "06011" }) }}" target="_blank">Drowned Disciple</a> <em>(All Men Are Fools, 11)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "12002" }) }}" target="_blank">Euron Crow’s Eye</a> <em>(Kings of the Isles, 2)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "12046" }) }}" target="_blank">We Take Westeros!</a> <em>(Kings of the Isles, 46)</em><br>
-        <a class="new" href="{{ path('cards_zoom', { card_code: "11012" }) }}" target="_blank">Nighttime Marauders</a> <em>(The Shadow City, 12)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "11012" }) }}" target="_blank">Nighttime Marauders</a> <em>(The Shadow City, 12)</em><br>
     </p>
 
     <p>
         <b><u>Lannister</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "05010" }) }}" target="_blank">Taena Merryweather</a> <em>(Lions of Casterly Rock, 10)</em><br>
-        <a class="new" href="{{ path('cards_zoom', { card_code: "15030" }) }}" target="_blank">The Red Keep</a> <em>(Dragons of the East, 30)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "15030" }) }}" target="_blank">The Red Keep</a> <em>(Dragons of the East, 30)</em><br>
     </p>
 
     <p>
@@ -604,8 +604,8 @@
         <b><u>Night's Watch</u></b><br>
         <a href="{{ path('cards_zoom', { card_code: "13085" }) }}" target="_blank">Yoren</a> <em>(The Blackwater, 85)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "13086" }) }}" target="_blank">Bound for the Wall</a> <em>(The Blackwater, 86)</em><br>
-        <a class="new" href="{{ path('cards_zoom', { card_code: "11085" }) }}" target="_blank">Three-Finger Hobb</a> <em>(In Daznak's Pit, 85)</em><br>
-        <a class="new" href="{{ path('cards_zoom', { card_code: "15033" }) }}" target="_blank">Clydas</a> <em>(Dragons of the East, 33)</em>
+        <a href="{{ path('cards_zoom', { card_code: "11085" }) }}" target="_blank">Three-Finger Hobb</a> <em>(In Daznak's Pit, 85)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "15033" }) }}" target="_blank">Clydas</a> <em>(Dragons of the East, 33)</em>
     </p>
     <p>
         <b><u>Stark</u>:</b><br>
@@ -635,9 +635,9 @@
         <b><u>Targaryen</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "11033" }) }}" target="_blank">Hizdahr zo Loraq</a> <em>(The March on Winterfell, 33)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "11034" }) }}" target="_blank">Meereen</a> <em>(The March on Winterfell, 34)</em><br>
-        <a class="new" href="{{ path('cards_zoom', { card_code: "09037" }) }}" target="_blank">Qotho</a> <em>(House of Thorns, 37)</em><br>
-        <a class="new" href="{{ path('cards_zoom', { card_code: "11114" }) }}" target="_blank">Gifts for the Widow</a> <em>(Dragons of the East, 14)</em><br>
-        <a class="new" href="{{ path('cards_zoom', { card_code: "15022" }) }}" target="_blank">Overwhelming Numbers</a> <em>(Dragons of the East, 22)</em>
+        <a href="{{ path('cards_zoom', { card_code: "09037" }) }}" target="_blank">Qotho</a> <em>(House of Thorns, 37)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "11114" }) }}" target="_blank">Gifts for the Widow</a> <em>(Dragons of the East, 14)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "15022" }) }}" target="_blank">Overwhelming Numbers</a> <em>(Dragons of the East, 22)</em>
     </p>
 
     <h2 id="Melee_Restricted_List">Melee Restricted List</h2>
