--- a/templates/Default/faq.en.html.twig
+++ b/templates/Default/faq.en.html.twig
@@ -201,7 +201,6 @@
         <li>Clearly display the infinite loop to the opponent (and tournament judge, if the opponent requires it). Thus,
             the player must display, using all cards involved, one full cycle of the infinite loop.
         </li>
-        <br>
         <li>State how many times he or she wishes to execute the loop. For example, the player could say, "I will now
             execute this loop seventeen times." Then, resolve the loop that many times instantly. If the execution of
             this loop causes the player to win the game, the game is over and the executing player wins.
@@ -251,24 +250,19 @@
         <li>A player cannot marshal, put into play, or take/gain control of a unique card if another copy of that card
             is in his or her dead pile.
         </li>
-        <br>
         <li>A player cannot marshal or put into play a copy of an opponent's unique card if another copy of that unique
             card (owned either by the player attempting to bring the card into play, or by the opponent who owns the
             unique card that is attempting to enter play) is already in play or is in its owner's dead pile.
         </li>
-        <br>
         <li>An ability that puts a unique card into play from a player's dead pile functions only if there would be no
             other copies of that card in that dead pile upon resolution of the ability.
         </li>
-        <br>
         <li>If a player controls a unique card that he or she does not own, that player and that card's owner cannot
             marshal or put into play additional copies of that card, regardless of ownership.
         </li>
-        <br>
         <li>If a player controls a unique card (regardless of ownership) that player cannot take/gain control of other
             copies of that card.
         </li>
-        <br>
         <li>If a player owns and controls a unique card, each other copy of that card that he or she owns and controls
             that would enter play does so as a duplicate.
         </li>
@@ -289,7 +283,6 @@
     <ul>
 
         <li>A player's power total is determined by counting the total number of power on cards he or she controls.</li>
-        <br>
         <li>Unless otherwise specified by an ability, a player may only use tokens that are in game areas or on cards he
             or she controls to pay costs.
         </li>
@@ -547,7 +540,30 @@
         restricted cards in the same deck. A player may run as many copies of his or her chosen restricted card in a
         deck as the regular game rules (or card text) allow.</p>
 
-    <p><b><u>Neutral</u>:</b><br>
+    <p class="new">Some restricted cards are so powerful, their inclusion in a deck comes with additional deck building restrictions
+        for other cards.<br>
+        If applicable, these additional restrictions are listed below the restricted card (indicated with an <span class="fas fa-long-arrow-alt-right"></span>
+        icon).</p>
+    <p class="new">
+        <em>For example:</em><br>
+        <strong><a href="{{ path('cards_zoom', { card_code: "01119" }) }}" target="_blank" class="new">Doran's Game</a>
+        <em>(Core, 119)</em></strong> is not restricted normally, but if
+        <strong><a href="{{ path('cards_zoom', { card_code: "10045" }) }}" target="_blank" class="new">The Wars To Come</a>
+        <em>(Sand of Dorne, 45)</em></strong> is your chosen restricted card, you cannot include
+        <strong><a href="{{ path('cards_zoom', { card_code: "01119" }) }}" target="_blank" class="new">Doran's Game</a>
+        <em>(Core, 119)</em></strong> in your deck.</p>
+    <p class="new">This restriction would be displayed as following:</p>
+    <div class="example new">
+        <a href="{{ path('cards_zoom', { card_code: "10045" }) }}" target="_blank" class="new">The Wars To Come</a>
+        <em>(Sand of Dorne, 45)</em>
+        <ul class="fa-ul">
+            <li class="new">
+                <span class="fa-li"><i class="fas fa-long-arrow-alt-right"></i></span>
+                <a href="{{ path('cards_zoom', { card_code: "01119" }) }}" target="_blank" class="new">Doran's Game</a>
+                <em>(Core, 119)</em></li>
+        </ul>
+    </div>
+    <div><b><u>Neutral</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "06040" }) }}" target="_blank">The Annals of Castle Black</a> <em>(Guarding the
             Realm, 40)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "06100" }) }}" target="_blank">Wheels Within Wheels</a> <em>(Oberyn's Revenge,
@@ -559,8 +575,26 @@
         <a href="{{ path('cards_zoom', { card_code: "04001" }) }}" target="_blank">The Dragon's Tail</a> <em>(Across the Seven Kingdoms,
             1)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "06098" }) }}" target="_blank">Flea Bottom</a> <em>(Oberyn's Revenge, 98)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "10045" }) }}" target="_blank">The Wars to Come</a> <em>(Sands of Dorne, 45)</em>
-        <br>
+        <ul class="fa-ul rl-pod-list">
+            <li class="new">
+                <span class="fa-li"><i class="fas fa-long-arrow-alt-right"></i></span>
+                <a href="{{ path('cards_zoom', { card_code: "01111" }) }}" target="_blank" class="new">Dornish Paramour</a>
+                <em>(Core, 111)</em>
+            </li>
+            <li class="new">
+                <span class="fa-li"><i class="fas fa-long-arrow-alt-right"></i></span>
+                <a href="{{ path('cards_zoom', { card_code: "10016" }) }}" target="_blank" class="new">Shadow City Bastard </a>
+                <em>(Sands of Dorne, 16)</em>
+            </li>
+        </ul>
+        <a href="{{ path('cards_zoom', { card_code: "10045" }) }}" target="_blank">The Wars To Come</a>
+        <em>(Sand of Dorne, 45)</em>
+        <ul class="fa-ul rl-pod-list">
+            <li class="new">
+                <span class="fa-li"><i class="fas fa-long-arrow-alt-right"></i></span>
+                <a href="{{ path('cards_zoom', { card_code: "01119" }) }}" target="_blank" class="new">Doran's Game</a>
+                <em>(Core, 119)</em></lii>
+        </ul>
         <a href="{{ path('cards_zoom', { card_code: "10050" }) }}" target="_blank">Breaking Ties</a> <em>(Sands of Dorne, 50)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "09051" }) }}" target="_blank">Trade Routes</a> <em>(House of Thorns, 51)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "12045" }) }}" target="_blank">Sea of Blood</a> <em>(Kings of the Isles, 45)</em><br>
@@ -570,51 +604,63 @@
         <a href="{{ path('cards_zoom', { card_code: "12047" }) }}" target="_blank"> Return to the Fields</a> <em>(Kings of the Isles, 47)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "13079" }) }}" target="_blank">Kingdom of Shadows</a> <em>(Beneath the Red Keep, 79)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "15045" }) }}" target="_blank">Bribery</a> <em>(Dragons of the East, 45)</em><br>
-    </p>
-    <p>
+    </div>
+    <div>
         <b><u>Baratheon</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "14008" }) }}" target="_blank">Selyse Baratheon</a> <em>(Fury of the Storm, 8)</em>
-    </p>
-    <p>
+    </div>
+    <div>
         <b><u>Greyjoy</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "02091" }) }}" target="_blank">Raider from Pyke</a> <em>(Calm Over Westeros, 91)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "02092" }) }}" target="_blank">Iron Mines</a> <em>(Calm Over Westeros, 92)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "11051" }) }}" target="_blank">Drowned God Fanatic</a> <em>(Streets of King's Landing, 51)</em><br>
+        <ul class="fa-ul rl-pod-list">
+            <li class="new">
+                <span class="fa-li"><i class="fas fa-long-arrow-alt-right"></i></span>
+                <a href="{{ path('cards_zoom', { card_code: "01111" }) }}" target="_blank" class="new">Dornish Paramour</a>
+                <em>(Core, 111)</em>
+            </li>
+            <li class="new">
+                <span class="fa-li"><i class="fas fa-long-arrow-alt-right"></i></span>
+                <a href="{{ path('cards_zoom', { card_code: "08091" }) }}" target="_blank" class="new">Tarle The Thrice-Drowned </a>
+                <em>(The Faith Militant, 91)</em>
+            </li>
+        </ul>
         <a href="{{ path('cards_zoom', { card_code: "06011" }) }}" target="_blank">Drowned Disciple</a> <em>(All Men Are Fools, 11)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "12002" }) }}" target="_blank">Euron Crow’s Eye</a> <em>(Kings of the Isles, 2)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "12046" }) }}" target="_blank">We Take Westeros!</a> <em>(Kings of the Isles, 46)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "11012" }) }}" target="_blank">Nighttime Marauders</a> <em>(The Shadow City, 12)</em><br>
-    </p>
+    </div>
 
-    <p>
+    <div>
         <b><u>Lannister</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "05010" }) }}" target="_blank">Taena Merryweather</a> <em>(Lions of Casterly Rock, 10)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "15030" }) }}" target="_blank">The Red Keep</a> <em>(Dragons of the East, 30)</em><br>
-    </p>
+    </div>
 
-    <p>
+    <div>
         <b><u>Martell</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "01109" }) }}" target="_blank">The Red Viper</a> <em>(Core, 109)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "04017" }) }}" target="_blank">Tower of the Sun</a> <em>(Across the Seven Kingdoms, 17)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "11076" }) }}" target="_blank">A Mission in Essos</a> <em>(Music of Dragons, 76)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "12029" }) }}" target="_blank">Desert Raider</a> <em>(Kings of the Isles, 29)</em>
-    </p>
+    </div>
 
-    <p>
+    <div>
         <b><u>Night's Watch</u></b><br>
         <a href="{{ path('cards_zoom', { card_code: "13085" }) }}" target="_blank">Yoren</a> <em>(The Blackwater, 85)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "13086" }) }}" target="_blank">Bound for the Wall</a> <em>(The Blackwater, 86)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "11085" }) }}" target="_blank">Three-Finger Hobb</a> <em>(In Daznak's Pit, 85)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "15033" }) }}" target="_blank">Clydas</a> <em>(Dragons of the East, 33)</em>
-    </p>
-    <p>
+    </div>
+    <div>
         <b><u>Stark</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "11021" }) }}" target="_blank">Wyman Manderly</a> <em>(The March on Winterfell, 21)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "02102" }) }}" target="_blank">Ward</a> <em>(True Steel, 102)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "11082" }) }}" target="_blank">Skagos</a> <em>(In Daznak’s Pit, 82)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "11061" }) }}" target="_blank">Meera Reed</a> <em>(Music of Dragons, 61)</em>
-    </p>
-    <p>
+    </div>
+    <div>
         <b><u>Tyrell</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "06103" }) }}" target="_blank">Highgarden Minstrel</a> <em>(The Brotherhood Without
             Banners, 103)</em><br>
@@ -629,16 +675,16 @@
         <a href="{{ path('cards_zoom', { card_code: "13103" }) }}" target="_blank">The Queen's Retinue</a> <em>(Long May He Reign, 103)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "13044" }) }}" target="_blank">Unexpected Guile</a> <em>(Pit of Snakes, 44)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "06063" }) }}" target="_blank">Oldtown Informer</a> <em>(The Red Wedding, 63)</em>
-    </p>
+    </div>
 
-    <p>
+    <div>
         <b><u>Targaryen</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "11033" }) }}" target="_blank">Hizdahr zo Loraq</a> <em>(The March on Winterfell, 33)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "11034" }) }}" target="_blank">Meereen</a> <em>(The March on Winterfell, 34)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "09037" }) }}" target="_blank">Qotho</a> <em>(House of Thorns, 37)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "11114" }) }}" target="_blank">Gifts for the Widow</a> <em>(Dragons of the East, 14)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "15022" }) }}" target="_blank">Overwhelming Numbers</a> <em>(Dragons of the East, 22)</em>
-    </p>
+    </div>
 
     <h2 id="Melee_Restricted_List">Melee Restricted List</h2>
 
@@ -646,7 +692,7 @@
         restricted cards in the same deck. A player may run as many copies of his or her chosen restricted card in a
         deck as the regular game rules (or card text) allow.</p>
 
-    <p><b><u>Neutral</u>:</b><br>
+    <div><b><u>Neutral</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "01001" }) }}" target="_blank">A Clash of Kings</a> <em>(Core, 1)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "01013" }) }}" target="_blank">Heads on Spikes</a> <em>(Core, 13)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "01043" }) }}" target="_blank">Superior Claim</a> <em>(Core, 43)</em><br>
@@ -664,14 +710,14 @@
         <a href="{{ path('cards_zoom', { card_code: "06040" }) }}" target="_blank">The Annals of Castle Black</a> <em>(Guarding the Realm, 40)</em>
         <br>
         <a href="{{ path('cards_zoom', { card_code: "08120" }) }}" target="_blank">You Win or You Die</a> <em>(Someone Always Tells, 120)</em>
-    </p>
+    </div>
 
-    <p><b><u>Baratheon</u>:</b><br>
+    <div><b><u>Baratheon</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "13107" }) }}" target="_blank">Robert Baratheon</a> <em>(Long May He Reign, 107)</em>
 
-    </p>
+    </div>
 
-    <p><b><u>Greyjoy</u>:</b><br>
+    <div><b><u>Greyjoy</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "01078" }) }}" target="_blank">Great Kraken</a> <em>(Core, 78)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "02012" }) }}" target="_blank">Rise of the Kraken</a> <em>(Taking the Black,
             12)</em><br>
@@ -679,42 +725,42 @@
         <br>
         <a href="{{ path('cards_zoom', { card_code: "06011" }) }}" target="_blank">Drowned Disciple</a> <em>(All Men Are Fools, 11)</em>
 
-    </p>
+    </div>
 
-    <p><b><u>Lannister</u>:</b><br>
+    <div><b><u>Lannister</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "05001" }) }}" target="_blank">Cersei Lannister</a> <em>(Lions of Casterly Rock,
             1)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "05010" }) }}" target="_blank">Taena Merryweather</a> <em>(Lions of Casterly Rock,
             10)</em>
-    </p>
+    </div>
 
-    <p><b><u>Martell</u>:</b><br>
+    <div><b><u>Martell</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "01119" }) }}" target="_blank">Doran's Game</a> <em>(Core, 119)</em>
         <br>
         <a href="{{ path('cards_zoom', { card_code: "11076" }) }}" target="_blank">A Mission in Essos</a> <em>(Music of Dragons, 76)</em>
-    </p>
+    </div>
 
-    <p><b><u>Stark</u>:</b><br>
+    <div><b><u>Stark</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "03003" }) }}" target="_blank">Eddard Stark</a> <em>(Wolves of the North,
             3)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "04003" }) }}" target="_blank">Riverrun</a> <em>(Across the Seven Kingdoms, 3)</em>
-    </p>
+    </div>
 
-    <p><b><u>Targaryen</u>:</b><br>
+    <div><b><u>Targaryen</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "07036" }) }}" target="_blank">Plaza of Pride</a> <em>(Watchers on the Wall,
             36)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "01162" }) }}" target="_blank">Khal Drogo</a> <em>(Core, 162)</em>
         <br>
         <a href="{{ path('cards_zoom', { card_code: "11054" }) }}" target="_blank">Queensguard</a> <em>(Streets of King’s Landing, 54)</em>
-    </p>
+    </div>
 
-    <p><b><u>Tyrell</u>:</b><br>
+    <div><b><u>Tyrell</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "02024" }) }}" target="_blank">Lady Sansa's Rose</a> <em>(The Road to Winterfell,
             24)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "06004" }) }}" target="_blank">All Men Are Fools</a> <em>(All Men Are Fools, 4)</em>
         <br>
         <a href="{{ path('cards_zoom', { card_code: "03038" }) }}" target="_blank">To the Rose Banner!</a> <em>(Wolves of the North, 38)</em>
-    </p>
+    </div>
 
     <h1 id="Banned_List">Banned Cards</h1>
     <p>The complete set of <a href="{{ path('cards_list', { pack_code: "TTWDFL" }) }}" target="_blank">The Things We Do For Love</a> is not legal for competitive play.</p>
@@ -1110,14 +1156,11 @@
 
     <ol>
         <li>Interrupts to the end of phase may be used.</li>
-        <br>
         <li>"<i>Until the end of the phase</i>" lasting abilities (and "<i>during the X phase</i>" abilities) expire.
             This step is the precise moment at which the phase ends, and anything that occurs as a result of the next
             two steps occurs outside of the phase.
         </li>
-        <br>
         <li>"<i>At the end of the phase</i>" delayed effects resolve.</li>
-        <br>
         <li>Reactions to the end of the phase may be used.</li>
 
     </ol>
