tightens up language.

--- a/templates/Default/faq.en.html.twig
+++ b/templates/Default/faq.en.html.twig
@@ -540,10 +540,10 @@
         restricted cards in the same deck. A player may run as many copies of his or her chosen restricted card in a
         deck as the regular game rules (or card text) allow.</p>
 
-    <p class="new">Some restricted cards are so powerful, their inclusion in a deck comes with additional deck building restrictions
-        for other cards.<br>
-        If applicable, these additional restrictions are listed below the restricted card (indicated with an <span class="fas fa-long-arrow-alt-right"></span>
-        icon).</p>
+    <p class="new">Some restricted cards are so powerful that their inclusion in a deck comes with additional
+        deckbuilding restrictions.<br>
+        If a player selects one of these cards as their restricted card, they may not include any of the cards
+        listed with <span class="fas fa-long-arrow-alt-right"></span> immediately below them.</p>
     <p class="new">
         <em>For example:</em><br>
         <strong><a href="{{ path('cards_zoom', { card_code: "01119" }) }}" target="_blank" class="new">Doran's Game</a>
