separates section on banned list for joust from melee.

--- a/templates/Default/faq.en.html.twig
+++ b/templates/Default/faq.en.html.twig
@@ -32,7 +32,7 @@
     <p>
         <b>New Content (Conclave v2.0):</b>
         <a href="#Joust_Restricted_List">Joust Restricted List</a>,
-        <a href="#Banned_List">Banned List</a>
+        <a href="#Joust_Banned_List">Joust Banned List</a>
     </p>
 
     <p class="mplain"><b>Notes</b> and <b>Related</b> cards added by <b>mplain</b>.</p>
@@ -697,83 +697,9 @@
         <a href="{{ path('cards_zoom', { card_code: "02034" }) }}" target="_blank" class="new">Crown of Gold</a> <em>(The Road to Winterfell, 34)</em>
     </div>
 
-    <h2 id="Melee_Restricted_List">Melee Restricted List</h2>
+    <h1 id="Joust_Banned_List">Joust Banned Cards</h1>
 
-    <p>A player may select one card from the restricted list for any given deck, and cannot then include any other
-        restricted cards in the same deck. A player may run as many copies of his or her chosen restricted card in a
-        deck as the regular game rules (or card text) allow.</p>
-
-    <div><b><u>Neutral</u>:</b><br>
-        <a href="{{ path('cards_zoom', { card_code: "01001" }) }}" target="_blank">A Clash of Kings</a> <em>(Core, 1)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "01013" }) }}" target="_blank">Heads on Spikes</a> <em>(Core, 13)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "01043" }) }}" target="_blank">Superior Claim</a> <em>(Core, 43)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "02060" }) }}" target="_blank">The Lord of the Crossing</a> <em>(The King's Peace,
-            60)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "04118" }) }}" target="_blank">Relentless Assault</a> <em>(Tyrion's Chain, 118)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "06039" }) }}" target="_blank">"The Dornishman's Wife"</a> <em>(Guarding the Realm,
-            39)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "06098" }) }}" target="_blank">Flea Bottom</a> <em>(Oberyn's Revenge, 98)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "08098" }) }}" target="_blank">"The Song of the Seven"</a> <em>(The Faith Militant,
-            98)</em>
-        <br>
-        <a href="{{ path('cards_zoom', { card_code: "05049" }) }}" target="_blank">Littlefinger’s Meddling</a> <em>(Lions of Casterly Rock, 49)</em>
-        <br>
-        <a href="{{ path('cards_zoom', { card_code: "06040" }) }}" target="_blank">The Annals of Castle Black</a> <em>(Guarding the Realm, 40)</em>
-        <br>
-        <a href="{{ path('cards_zoom', { card_code: "08120" }) }}" target="_blank">You Win or You Die</a> <em>(Someone Always Tells, 120)</em>
-    </div>
-    <br>
-    <div><b><u>Baratheon</u>:</b><br>
-        <a href="{{ path('cards_zoom', { card_code: "13107" }) }}" target="_blank">Robert Baratheon</a> <em>(Long May He Reign, 107)</em>
-    </div>
-    <br>
-    <div><b><u>Greyjoy</u>:</b><br>
-        <a href="{{ path('cards_zoom', { card_code: "01078" }) }}" target="_blank">Great Kraken</a> <em>(Core, 78)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "02012" }) }}" target="_blank">Rise of the Kraken</a> <em>(Taking the Black,
-            12)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "09028" }) }}" target="_blank">Corpse Lake</a> <em>(House of Thorns, 28)</em>
-        <br>
-        <a href="{{ path('cards_zoom', { card_code: "06011" }) }}" target="_blank">Drowned Disciple</a> <em>(All Men Are Fools, 11)</em>
-    </div>
-    <br>
-    <div><b><u>Lannister</u>:</b><br>
-        <a href="{{ path('cards_zoom', { card_code: "05001" }) }}" target="_blank">Cersei Lannister</a> <em>(Lions of Casterly Rock,
-            1)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "05010" }) }}" target="_blank">Taena Merryweather</a> <em>(Lions of Casterly Rock,
-            10)</em>
-    </div>
-    <br>
-    <div><b><u>Martell</u>:</b><br>
-        <a href="{{ path('cards_zoom', { card_code: "01119" }) }}" target="_blank">Doran's Game</a> <em>(Core, 119)</em>
-        <br>
-        <a href="{{ path('cards_zoom', { card_code: "11076" }) }}" target="_blank">A Mission in Essos</a> <em>(Music of Dragons, 76)</em>
-    </div>
-    <br>
-    <div><b><u>Stark</u>:</b><br>
-        <a href="{{ path('cards_zoom', { card_code: "03003" }) }}" target="_blank">Eddard Stark</a> <em>(Wolves of the North,
-            3)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "04003" }) }}" target="_blank">Riverrun</a> <em>(Across the Seven Kingdoms, 3)</em>
-    </div>
-    <br>
-    <div><b><u>Targaryen</u>:</b><br>
-        <a href="{{ path('cards_zoom', { card_code: "07036" }) }}" target="_blank">Plaza of Pride</a> <em>(Watchers on the Wall,
-            36)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "01162" }) }}" target="_blank">Khal Drogo</a> <em>(Core, 162)</em>
-        <br>
-        <a href="{{ path('cards_zoom', { card_code: "11054" }) }}" target="_blank">Queensguard</a> <em>(Streets of King’s Landing, 54)</em>
-    </div>
-    <br>
-    <div><b><u>Tyrell</u>:</b><br>
-        <a href="{{ path('cards_zoom', { card_code: "02024" }) }}" target="_blank">Lady Sansa's Rose</a> <em>(The Road to Winterfell,
-            24)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "06004" }) }}" target="_blank">All Men Are Fools</a> <em>(All Men Are Fools, 4)</em>
-        <br>
-        <a href="{{ path('cards_zoom', { card_code: "03038" }) }}" target="_blank">To the Rose Banner!</a> <em>(Wolves of the North, 38)</em>
-    </div>
-
-    <h1 id="Banned_List">Banned Cards</h1>
-
-    <p>Banned cards are not legal for competitive play.</p>
+    <p>The following cards are not legal for competitive play in Joust.</p>
 
     <div>
         <b><u>Neutral</u>:</b><br>
@@ -849,6 +775,83 @@
         <a href="{{ path('cards_zoom', { card_code: "16013" }) }}" target="_blank">Mad King Aerys</a> <em>(The Things We Do For Love, 13)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "16014" }) }}" target="_blank">The Hatchlings' Feast</a> <em>(The Things We Do For Love, 14)</em><br>
     </div>
+
+    <h2 id="Melee_Restricted_List">Melee Restricted List</h2>
+
+    <p>A player may select one card from the restricted list for any given deck, and cannot then include any other
+        restricted cards in the same deck. A player may run as many copies of his or her chosen restricted card in a
+        deck as the regular game rules (or card text) allow.</p>
+
+    <div><b><u>Neutral</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "01001" }) }}" target="_blank">A Clash of Kings</a> <em>(Core, 1)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "01013" }) }}" target="_blank">Heads on Spikes</a> <em>(Core, 13)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "01043" }) }}" target="_blank">Superior Claim</a> <em>(Core, 43)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "02060" }) }}" target="_blank">The Lord of the Crossing</a> <em>(The King's Peace,
+            60)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "04118" }) }}" target="_blank">Relentless Assault</a> <em>(Tyrion's Chain, 118)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "06039" }) }}" target="_blank">"The Dornishman's Wife"</a> <em>(Guarding the Realm,
+            39)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "06098" }) }}" target="_blank">Flea Bottom</a> <em>(Oberyn's Revenge, 98)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "08098" }) }}" target="_blank">"The Song of the Seven"</a> <em>(The Faith Militant,
+            98)</em>
+        <br>
+        <a href="{{ path('cards_zoom', { card_code: "05049" }) }}" target="_blank">Littlefinger’s Meddling</a> <em>(Lions of Casterly Rock, 49)</em>
+        <br>
+        <a href="{{ path('cards_zoom', { card_code: "06040" }) }}" target="_blank">The Annals of Castle Black</a> <em>(Guarding the Realm, 40)</em>
+        <br>
+        <a href="{{ path('cards_zoom', { card_code: "08120" }) }}" target="_blank">You Win or You Die</a> <em>(Someone Always Tells, 120)</em>
+    </div>
+    <br>
+    <div><b><u>Baratheon</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "13107" }) }}" target="_blank">Robert Baratheon</a> <em>(Long May He Reign, 107)</em>
+    </div>
+    <br>
+    <div><b><u>Greyjoy</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "01078" }) }}" target="_blank">Great Kraken</a> <em>(Core, 78)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "02012" }) }}" target="_blank">Rise of the Kraken</a> <em>(Taking the Black,
+            12)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "09028" }) }}" target="_blank">Corpse Lake</a> <em>(House of Thorns, 28)</em>
+        <br>
+        <a href="{{ path('cards_zoom', { card_code: "06011" }) }}" target="_blank">Drowned Disciple</a> <em>(All Men Are Fools, 11)</em>
+    </div>
+    <br>
+    <div><b><u>Lannister</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "05001" }) }}" target="_blank">Cersei Lannister</a> <em>(Lions of Casterly Rock,
+            1)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "05010" }) }}" target="_blank">Taena Merryweather</a> <em>(Lions of Casterly Rock,
+            10)</em>
+    </div>
+    <br>
+    <div><b><u>Martell</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "01119" }) }}" target="_blank">Doran's Game</a> <em>(Core, 119)</em>
+        <br>
+        <a href="{{ path('cards_zoom', { card_code: "11076" }) }}" target="_blank">A Mission in Essos</a> <em>(Music of Dragons, 76)</em>
+    </div>
+    <br>
+    <div><b><u>Stark</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "03003" }) }}" target="_blank">Eddard Stark</a> <em>(Wolves of the North,
+            3)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "04003" }) }}" target="_blank">Riverrun</a> <em>(Across the Seven Kingdoms, 3)</em>
+    </div>
+    <br>
+    <div><b><u>Targaryen</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "07036" }) }}" target="_blank">Plaza of Pride</a> <em>(Watchers on the Wall,
+            36)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "01162" }) }}" target="_blank">Khal Drogo</a> <em>(Core, 162)</em>
+        <br>
+        <a href="{{ path('cards_zoom', { card_code: "11054" }) }}" target="_blank">Queensguard</a> <em>(Streets of King’s Landing, 54)</em>
+    </div>
+    <br>
+    <div><b><u>Tyrell</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "02024" }) }}" target="_blank">Lady Sansa's Rose</a> <em>(The Road to Winterfell,
+            24)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "06004" }) }}" target="_blank">All Men Are Fools</a> <em>(All Men Are Fools, 4)</em>
+        <br>
+        <a href="{{ path('cards_zoom', { card_code: "03038" }) }}" target="_blank">To the Rose Banner!</a> <em>(Wolves of the North, 38)</em>
+    </div>
+
+    <h1 id="Melee_Banned_List">Melee Banned Cards</h1>
+    <p>The complete set of <a href="{{ path('cards_list', { pack_code: "TTWDFL" }) }}" target="_blank">The Things We Do For Love</a> is not legal for competitive play in Melee.</p>
 
     <h1 id="Frequently_Asked_Questions">Frequently Asked Questions</h1>
 
