markup and wording tweaks.

--- a/templates/Default/faq.en.html.twig
+++ b/templates/Default/faq.en.html.twig
@@ -697,7 +697,7 @@
         <a href="{{ path('cards_zoom', { card_code: "02034" }) }}" target="_blank" class="new">Crown of Gold</a> <em>(The Road to Winterfell, 34)</em>
     </div>
 
-    <h1 id="Joust_Banned_List">Joust Banned Cards</h1>
+    <h2 id="Joust_Banned_List">Joust Banned List</h2>
 
     <p>The following cards are not legal for competitive play in Joust.</p>
 
@@ -850,7 +850,7 @@
         <a href="{{ path('cards_zoom', { card_code: "03038" }) }}" target="_blank">To the Rose Banner!</a> <em>(Wolves of the North, 38)</em>
     </div>
 
-    <h1 id="Melee_Banned_List">Melee Banned Cards</h1>
+    <h2 id="Melee_Banned_List">Melee Banned List</h2>
     <p>The complete set of <a href="{{ path('cards_list', { pack_code: "TTWDFL" }) }}" target="_blank">The Things We Do For Love</a> is not legal for competitive play in Melee.</p>
 
     <h1 id="Frequently_Asked_Questions">Frequently Asked Questions</h1>
