--- a/templates/Default/faq.en.html.twig
+++ b/templates/Default/faq.en.html.twig
@@ -15,7 +15,7 @@
 <div style="text-align:justify">
 
     <h1 id="FAQ">Notes, Errata, and Frequently Asked Questions</h1>
-    <h3>The Conclave (Version 2.0), effective 07/03/2020 (<a href="https://agot.cards/wp-content/uploads/2020/06/RL_June20_joust.pdf" target="_blank">link</a>).</h3>
+    <h3>The Conclave (Version 2.0), effective 07/03/2020 (<a href="https://agot.cards/wp-content/uploads/2020/07/RL_Full_July2020-Printable.pdf" target="_blank">link</a>).</h3>
 
     <p>This document contains card clarification, errata, rule clarifications, frequently asked questions, and quick
         reference material for <em>A Game of Thrones: The Card Game</em>. The most recent version of this document is
@@ -32,7 +32,9 @@
     <p>
         <b>New Content (Conclave v2.0):</b>
         <a href="#Joust_Restricted_List">Joust Restricted List</a>,
-        <a href="#Joust_Banned_List">Joust Banned List</a>
+        <a href="#Joust_Banned_List">Joust Banned List</a>,
+        <a href="#Melee_Restricted_List">Melee Restricted List</a>,
+        <a href="#Melee_Banned_List">Melee Banned List</a>
     </p>
 
     <p class="mplain"><b>Notes</b> and <b>Related</b> cards added by <b>mplain</b>.</p>
@@ -795,11 +797,11 @@
         <a href="{{ path('cards_zoom', { card_code: "08098" }) }}" target="_blank">"The Song of the Seven"</a> <em>(The Faith Militant,
             98)</em>
         <br>
-        <a href="{{ path('cards_zoom', { card_code: "05049" }) }}" target="_blank">Littlefinger’s Meddling</a> <em>(Lions of Casterly Rock, 49)</em>
-        <br>
         <a href="{{ path('cards_zoom', { card_code: "06040" }) }}" target="_blank">The Annals of Castle Black</a> <em>(Guarding the Realm, 40)</em>
         <br>
-        <a href="{{ path('cards_zoom', { card_code: "08120" }) }}" target="_blank">You Win or You Die</a> <em>(Someone Always Tells, 120)</em>
+        <a href="{{ path('cards_zoom', { card_code: "08120" }) }}" target="_blank">You Win or You Die</a> <em>(Someone Always Tells, 120)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "11039" }) }}" target="_blank" class="new">Trading With Qohor</a> <em>(The March on Winterfell, 39)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "15045" }) }}" target="_blank" class="new">Bribery</a> <em>(Dragons of the East, 45)</em>
     </div>
     <br>
     <div><b><u>Baratheon</u>:</b><br>
@@ -810,6 +812,7 @@
         <a href="{{ path('cards_zoom', { card_code: "01078" }) }}" target="_blank">Great Kraken</a> <em>(Core, 78)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "02012" }) }}" target="_blank">Rise of the Kraken</a> <em>(Taking the Black,
             12)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "08013" }) }}" target="_blank" class="new">Nagga's Ribs</a> <em>(The Archmaester's Key, 13)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "09028" }) }}" target="_blank">Corpse Lake</a> <em>(House of Thorns, 28)</em>
         <br>
         <a href="{{ path('cards_zoom', { card_code: "06011" }) }}" target="_blank">Drowned Disciple</a> <em>(All Men Are Fools, 11)</em>
@@ -817,21 +820,19 @@
     <br>
     <div><b><u>Lannister</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "05001" }) }}" target="_blank">Cersei Lannister</a> <em>(Lions of Casterly Rock,
-            1)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "05010" }) }}" target="_blank">Taena Merryweather</a> <em>(Lions of Casterly Rock,
-            10)</em>
+            1)</em>
     </div>
     <br>
     <div><b><u>Martell</u>:</b><br>
         <a href="{{ path('cards_zoom', { card_code: "01119" }) }}" target="_blank">Doran's Game</a> <em>(Core, 119)</em>
-        <br>
-        <a href="{{ path('cards_zoom', { card_code: "11076" }) }}" target="_blank">A Mission in Essos</a> <em>(Music of Dragons, 76)</em>
     </div>
     <br>
     <div><b><u>Stark</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "01146" }) }}" target="_blank" class="new">Robb Stark</a> <em>(Core Set, 146)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "03003" }) }}" target="_blank">Eddard Stark</a> <em>(Wolves of the North,
             3)</em><br>
-        <a href="{{ path('cards_zoom', { card_code: "04003" }) }}" target="_blank">Riverrun</a> <em>(Across the Seven Kingdoms, 3)</em>
+        <a href="{{ path('cards_zoom', { card_code: "04003" }) }}" target="_blank">Riverrun</a> <em>(Across the Seven Kingdoms, 3)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "08082" }) }}" target="_blank" class="new">I Am No One</a> <em>(The Faith Militant, 82)</em>
     </div>
     <br>
     <div><b><u>Targaryen</u>:</b><br>
@@ -839,6 +840,7 @@
             36)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "01162" }) }}" target="_blank">Khal Drogo</a> <em>(Core, 162)</em>
         <br>
+        <a href="{{ path('cards_zoom', { card_code: "08014" }) }}" target="_blank" class="new">Daario Naharis</a> <em>(The Archmaester's Key, 14)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "11054" }) }}" target="_blank">Queensguard</a> <em>(Streets of King’s Landing, 54)</em>
     </div>
     <br>
@@ -847,11 +849,84 @@
             24)</em><br>
         <a href="{{ path('cards_zoom', { card_code: "06004" }) }}" target="_blank">All Men Are Fools</a> <em>(All Men Are Fools, 4)</em>
         <br>
-        <a href="{{ path('cards_zoom', { card_code: "03038" }) }}" target="_blank">To the Rose Banner!</a> <em>(Wolves of the North, 38)</em>
+        <a href="{{ path('cards_zoom', { card_code: "09001" }) }}" target="_blank" class="new">Mace Tyrell</a> <em>(House of Thorns, 1)</em>
     </div>
 
     <h2 id="Melee_Banned_List">Melee Banned List</h2>
-    <p>The complete set of <a href="{{ path('cards_list', { pack_code: "TTWDFL" }) }}" target="_blank">The Things We Do For Love</a> is not legal for competitive play in Melee.</p>
+
+    <p>The following cards are not legal for competitive play in Melee.</p>
+
+    <div>
+        <b><u>Neutral</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "05049" }) }}" target="_blank" class="new">Littlefinger's Meddling</a> <em>(Lions of Casterly Rock, 49)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16017" }) }}" target="_blank">Littlefinger</a> <em>(The Things We Do For Love, 17)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16018" }) }}" target="_blank">Vale Refugee</a> <em>(The Things We Do For Love, 18)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16019" }) }}" target="_blank">High Ground</a> <em>(The Things We Do For Love, 19)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16020" }) }}" target="_blank">King's Landing</a> <em>(The Things We Do For Love, 20)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16021" }) }}" target="_blank">Harrenhal</a> <em>(The Things We Do For Love, 21)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16022" }) }}" target="_blank">Sky Cell</a> <em>(The Things We Do For Love, 22)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16023" }) }}" target="_blank">Heads on Pikes</a> <em>(The Things We Do For Love, 23)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16024" }) }}" target="_blank">Narrow Escape</a> <em>(The Things We Do For Love, 24)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16025" }) }}" target="_blank">Seductive Promise</a> <em>(The Things We Do For Love, 25)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16026" }) }}" target="_blank">Westeros Bleeds</a> <em>(The Things We Do For Love, 26)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16031" }) }}" target="_blank">Benjen's Cache</a> <em>(The Things We Do For Love, 31)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16032" }) }}" target="_blank">Rioting</a> <em>(The Things We Do For Love, 32)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16033" }) }}" target="_blank">Rule By Decree</a> <em>(The Things We Do For Love, 33)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16034" }) }}" target="_blank">Search and Detain</a> <em>(The Things We Do For Love, 34)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16035" }) }}" target="_blank">The Art of Seduction</a> <em>(The Things We Do For Love, 35)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16036" }) }}" target="_blank">The Gathering Storm</a> <em>(The Things We Do For Love, 36)</em><br>
+    </div>
+    <br>
+    <div>
+        <b><u>Baratheon</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "16001" }) }}" target="_blank">Ser Davos Seaworth</a> <em>(The Things We Do For Love, 1)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16002" }) }}" target="_blank">Melisandre's Favor</a> <em>(The Things We Do For Love, 2)</em><br>
+    </div>
+    <br>
+    <div>
+        <b><u>Greyjoy</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "16003" }) }}" target="_blank">Wintertime Marauders</a> <em>(The Things We Do For Love, 3)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16004" }) }}" target="_blank">Conquer</a> <em>(The Things We Do For Love, 4)</em><br>
+    </div>
+    <br>
+    <div>
+        <b><u>Lannister</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "05010" }) }}" target="_blank" class="new">Taena Merryweather</a> <em>(Lions of Casterly Rock, 10)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16005" }) }}" target="_blank">Spider's Whisperer</a> <em>(The Things We Do For Love, 5)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16006" }) }}" target="_blank">Wheels Within Wheels</a> <em>(The Things We Do For Love, 6)</em><br>
+    </div>
+    <br>
+    <div>
+        <b><u>Martell</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "11076" }) }}" target="_blank" class="new">A Mission in Essos</a> <em>(Music of Dragons, 76)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16007" }) }}" target="_blank">Prince's Loyalist</a> <em>(The Things We Do For Love, 7)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16008" }) }}" target="_blank">You Murdered Her Children</a> <em>(The Things We Do For Love, 8)</em><br>
+    </div>
+    <br>
+    <div>
+        <b><u>Night's Watch</u></b><br>
+        <a href="{{ path('cards_zoom', { card_code: "16009" }) }}" target="_blank">Samwell Tarly</a> <em>(The Things We Do For Love, 9)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16010" }) }}" target="_blank">Old Bear Mormont</a> <em>(The Things We Do For Love, 10)</em><br>
+    </div>
+    <br>
+    <div>
+        <b><u>Stark</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "16011" }) }}" target="_blank">Catelyn Stark</a> <em>(The Things We Do For Love, 11)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16012" }) }}" target="_blank">Snow Castle</a> <em>(The Things We Do For Love, 12)</em><br>
+    </div>
+    <br>
+    <div>
+        <b><u>Tyrell</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "03038" }) }}" target="_blank" class="new">To the Rose Banner!</a> <em>(Wolves of the North, 38)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16015" }) }}" target="_blank">The Queen of Thorns</a> <em>(The Things We Do For Love, 15)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16016" }) }}" target="_blank">Olenna's Study</a> <em>(The Things We Do For Love, 16)</em><br>
+    </div>
+    <br>
+    <div>
+        <b><u>Targaryen</u>:</b><br>
+        <a href="{{ path('cards_zoom', { card_code: "16013" }) }}" target="_blank">Mad King Aerys</a> <em>(The Things We Do For Love, 13)</em><br>
+        <a href="{{ path('cards_zoom', { card_code: "16014" }) }}" target="_blank">The Hatchlings' Feast</a> <em>(The Things We Do For Love, 14)</em><br>
+    </div>
 
     <h1 id="Frequently_Asked_Questions">Frequently Asked Questions</h1>
 
