--- a/templates/Export/sortedbycycle.txt.twig
+++ b/templates/Export/sortedbycycle.txt.twig
@@ -2,7 +2,7 @@
 
 {{ deck.faction.name }}
 {% for agenda in deck.agendas %}
-{{ agenda.card.name }}
+{{ agenda.card.name }}{% if agenda.card.isMultiple == true %} ({{ agenda.card.pack.name }}){% endif %}
 {% endfor %}
 
 {% set first_pack = deck.included_packs|first %}
