take deck name from copied contents into import form.

--- a/templates/Builder/directimport.html.twig
+++ b/templates/Builder/directimport.html.twig
@@ -29,7 +29,7 @@
             </div>
 
             <div class="col-md-6">
-                <form role="form" action="{{ path('deck_save') }}" method="POST">
+                <form role="form" id="deckimport" action="{{ path('deck_save') }}" method="POST">
                     <div class="form-group">
                         <label for="name">Deck Name</label>
                         <input class="form-control decklist-name" type="text" name="name" placeholder="Name">
