--- a/templates/Builder/decks.html.twig
+++ b/templates/Builder/decks.html.twig
@@ -55,6 +55,15 @@
                             </button>
                             <ul class="dropdown-menu" role="menu">
                                 <li class="dropdown-header">
+                                    <span class="fas fa-file-download"></span>
+                                    {{ 'decks.form.selection.download.label' | trans }}
+                                </li>
+                                <li>
+                                    <a href="#" id="btn-download-selected">
+                                        {{ 'decks.form.selection.download.selected' | trans }}
+                                    </a>
+                                </li>
+                                <li class="dropdown-header">
                                     <span class="fas fa-exchange-alt"></span>
                                     {{ 'decks.form.selection.compare.label' | trans }}
                                 </li>
@@ -210,5 +219,6 @@
     {% include 'Modale/tag_remove.html.twig' %}
     {% include 'Modale/tag_clear.html.twig' %}
     {% include 'Modale/diff.html.twig' %}
+    {% include 'Builder/download_list.html.twig' %}
 
 {% endblock %}
