print deck version on separate line.
since we're reading the deck's title from the first line on
import, we don't want grab that version info as part of that.

--- a/templates/Export/default.txt.twig
+++ b/templates/Export/default.txt.twig
@@ -1,4 +1,5 @@
-{{ deck.name }} {{ deck.version }}
+{{ deck.name }}
+Version: {{ deck.version }}
 
 {{ deck.faction.name }}
 {% for agenda in deck.agendas %}
