close dropdown after download has been initiated.

--- a/templates/Builder/decks.html.twig
+++ b/templates/Builder/decks.html.twig
@@ -48,7 +48,11 @@
                 <div class="row" style="margin-bottom:10px">
                     <div class="col-md-12">
                         <div class="btn-group" id="btn-group-selection">
-                            <button type="button" class="btn btn-default dropdown-toggle btn-sm" data-toggle="dropdown">
+                            <button
+                                type="button"
+                                class="btn btn-default dropdown-toggle btn-sm selected-decks-dropdown-toggle"
+                                data-toggle="dropdown"
+                            >
                                 <span class="fas fa-check"></span>
                                 {{ 'decks.form.selection.label' | trans }}
                                 <span class="caret"></span>
