corrects element ids.

--- a/templates/Restrictions/restrictedlist.html.twig
+++ b/templates/Restrictions/restrictedlist.html.twig
@@ -5,7 +5,7 @@
     Available variables:
     - list: a restricted list object
 #}
-<div id="#{{ list.code }}" class="restricted-list">
+<div id="{{ list.code }}" class="restricted-list">
     <h2>{{ list.title }}
         <a href="{{ path('restrictions') }}#{{ list.code }}">
             <span class="fa fa-link" aria-hidden="true"></span>
